--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="variables.css">
     <link rel="stylesheet" href="layout.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Clock</title>
 </head>
 <body>
 
